[package]
name = "wqactix"
version = "0.1.0"
authors = ["honestold3 <honestold3@gmail.com>"]

[dependencies]
actix = "0.7"
rand = "0.3"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "kankan"